[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.5"
gloo-utils = "0.2"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
futures-util = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Element",                  # <== Enables Element type
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "MouseEvent",
  "CssStyleDeclaration"       # <== Enables .style() method
]
